# OP-PLUS-PLUS

./: .gitignore  README.md  pyproject.toml
app/api/: main.py
app/engine/: change_name.py  export.py  filter_column_number.py  filter_column_text.py  find_errors.py  get_columns_count.py  remove_column.py  remove_column_accent.py  remove_nulls.py  text_case.py  trim_column.py
app/utils/: accent_process.py  get_file_ext.py  pagination.py  remove_accent.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  Home.jsx  index.css  main.jsx
frontend/src/api/: getDataset.js  transform.js  upload.js
frontend/src/components/: Card.jsx  FilterTextCard.jsx  Icon.jsx  Pagination.jsx  ProvisionalButtons.jsx  RemoveAccentCard.jsx  RenameColumnCard.jsx  Sidebar.jsx  SidebarCard.jsx  Table.jsx
frontend/src/context/: DataContext.jsx
frontend/src/hooks/: usePagination.jsx
frontend/src/utils/: formatDataset.js
