[project]
name = "op-plus-plus"
version = "0.1.0"
description = "comming soon..."
authors = [
    {name = "javi-diaz47",email = "javiereduardo300@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
